# bitbot_xbox

./: .gitignore  CMakeLists.txt  README.md
config/: default.yaml  frontend.yaml
include/: bitbot_frontend.hpp  js_utils.hpp  xbox_js.hpp
src/: bitbot_frontend.cc  js_example.cc  rumble_test.cc  xbox_js.cc
